# Gaming_optimizer

./: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  USAGE.md  profiles.example.json
.github/: copilot-instructions.md
src/: config.rs  ipc.rs  main.rs  overlay.rs  process.rs  profile.rs  tray.rs  tray_flyout.rs
src/gui/: mod.rs
