[package]
name = "gaming_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "0.14"           # System tray with menu support (Windows compatible)
winit = "0.29"               # Window creation for overlay
image = "0.24"               # PNG image loading
sysinfo = "0.30"             # Process enumeration and management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"           # JSON serialization for profiles
directories = "5.0"          # Cross-platform user data directory
anyhow = "1.0"              # Error handling
softbuffer = "0.3"          # Software rendering for overlay window

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3           # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization, slower compile
strip = true           # Strip symbols for smaller binary
panic = "abort"        # Smaller binary, faster panic
