[package]
name = "gaming_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI & Window Management
iced = { version = "0.12", features = ["debug", "image"] }
tray-icon = "0.14"           # System tray with menu support (Windows compatible)
winit = "0.29"               # Window creation for overlay
softbuffer = "0.4"           # Software rendering for overlay window

# Image & File Handling
image = "0.24"               # PNG image loading
rfd = "0.14"                 # File dialogs (cross-platform)

# System & Process Management
sysinfo = "0.30"             # Process enumeration and management
parking_lot = "0.12"         # Synchronization primitives

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"           # JSON serialization for profiles
directories = "5.0"          # Cross-platform user data directory

# Error Handling
anyhow = "1.0"              # Error handling
thiserror = "1.0"           # Derive macro for error types

# Threading & IPC
tokio = { version = "1.35", features = ["sync", "macros", "rt-multi-thread", "time"] }
crossbeam = "0.8"           # Multi-producer, multi-consumer channels
once_cell = "1.19"          # Lazy static initialization

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }
winapi = { version = "0.3", features = ["shellapi", "shlobj", "combaseapi"] }

[profile.release]
opt-level = 3           # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization, slower compile
strip = true           # Strip symbols for smaller binary
panic = "abort"        # Smaller binary, faster panic
